--- a/ReactJS/session-2/package.json
+++ b/ReactJS/session-2/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-noti": "^1.0.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
